--- a/ggtricks.Rmd
+++ b/ggtricks.Rmd
@@ -13,7 +13,7 @@ This workshop assumes that you:
 
 Before we begin, we'll need to install and load the packages we'll be working with from CRAN:
 ```{r}
-pacman::p_load(tidyverse, pokemon, cowplot, ggpubr, gridExtra, ggsci)
+pacman::p_load(tidyverse, pokemon, cowplot, ggpubr, gridExtra, ggsci, devtools)
 ```
 
 If you attended the prior workshops, you've already been introduced to Tidyverse and the pokemon data set. We'll also be working with some packages that add new functionality to the ggverse:
@@ -22,15 +22,15 @@ If you attended the prior workshops, you've already been introduced to Tidyverse
 * *ggpubr* allows users to annotate plots, including overlay of statistical comparisons directly onto plots, and provides some user-friendly tools for manipulating ggplot formatting
 * *ggsci* has a variety of *ggplot2* color palettes inspired by scientific journals, data visualization libraries, movies, and TV shows
 
-## Working with cowplot: themes and plot_grid
+# Working with cowplot: themes and plot_grid
 This package includes some new theme options to explore:
 ```{r}
 ggplot(pokemon, aes(attack, defense, color=type_1)) +  # data + aesthetics (x, y, point color) 
   geom_point() +
-  theme_minimal_vgrid()
+#  theme_minimal_vgrid()
 #  theme_minimal_hgrid()
 #  theme_minimal_grid(12)
-#  theme_cowplot(12) # classic cowplot theme
+  theme_cowplot(12) # classic cowplot theme
 ```
 
 Most of the functionality here is for creation of multipanel plots.
@@ -52,7 +52,7 @@ plot_grid(p1, p2,
 
 The grid components can be basically any plot object. 
 ```{r}
-p3 <-ggplot(pokemon, aes(attack, defense, color=as.factor(generation_id))) +  # data + aesthetics (x, y, point color) 
+p3 <- ggplot(pokemon, aes(attack, defense, color=as.factor(generation_id))) +  # data + aesthetics (x, y, point color) 
   geom_point() +
   geom_smooth() +  # Produces a smoothed line showing data trends
   theme_classic()+
@@ -97,7 +97,6 @@ How would you change the attack vs. defense plot for the different generations
 ```
 
 
-
 *******************************************************************************************************************************************
 # Intro to data manipulation in Tidyverse
 Before we go any farther, we need to know how to manipulate data within tibbles. Tidyverse makes it very easy to do this. 
@@ -109,36 +108,12 @@ First, we can mutate (transform) existing columns and append the results to the 
 ?mutate
 ```
 
-
 Then we can use it:
 ```{r}
-mydata<-mydata %>%
-  mutate(lbs=2.2046*kg)
-mydata
+pokemon <- pokemon %>%
+  mutate(lbs=2.2046*weight)
+pokemon
 ```
-
-Sometimes after plotting, may realize that you want to manipulate the data some more to make different plots.
-Let's say you want to look for a correlation between typing systems within a pokemon.
-However, as an experienced pokeologist, you know that not all pokemon are dual typed.
-
-```{r}
-glimpse(pokemon) # taking a look at the data
-sum(is.na(pokemon$type_2))
-```
-
-To deal with this, you may will need to remove non-dual-typed pokémon.
-While we're at it, let's exclude some columns we don't care about.
-```{r}
-pokemon %>% select(-url_icon, -url_image) %>%
-  na.exclude(type_2)
-```
-
-```{r}
-pokemon %>% select(-url_icon, -url_image) %>%
-  na.exclude(type_2) %>% ggplot(aes(x = type_1, y = type_2, fill = frequency())) + geom_tile()
-  
-```
-
 *******************************************************************************************************************************************
 Wait - what did we do there? That's called a **pipe**, and it comes from a Tidyverse package called **magrittr**. 
 
@@ -160,44 +135,110 @@ sqrt(25) %>%   # Take the square root of 25...
 ```
 
 What the pipe is doing is putting the result from the left-hand side (or in our case from above) and put it into the right hand side (or in our case into the code below). When we write out code this way, it's much easier to see what is happening, as well as to fix any mistakes.
+
 *******************************************************************************************************************************************
+
+# select() and filter(): basic data manipulation
 
 But let's get back to parsing our data. We can select only specific columns:
 ```{r}
-mydata %>%
-  select(animal, body_len)
+pokemon %>%
+  select(pokemon, height)
 ```
 
 or a range of columns:
 ```{r}
-mydata %>%
-  select(animal:body_len)
+pokemon %>%
+  select(pokemon:height)
 ```
 
 We can filter a tibble, retaining only the rows that satisfy a given condition:
 ```{r}
-mydata %>%
-  filter(kg>25)
+pokemon %>%
+  filter(weight > 25)
 ```
 
 There's more functionality available here (lots more!) but these are some of the most useful basic operations to have when handling tibbles.
 
+*******************************************************************************************************************************************
+
+# More data manipulation tricks
+
+Sometimes after plotting, may realize that you want to manipulate the data some more to make different plots.
+I'm curious about the mega evolutions, but we need to do some exploration before we can plot.
+
+Which pokemon have mega evolutions? Let's use grep and stringr to extract the rows that we're interested in
+```{r}
+#hits <- grep("mega", pokemon$pokemon, fixed = TRUE, value = TRUE)
+#hits
+#what is the problem with this? why do I need to do this differently?
+
+hits <- as.data.frame(grep("-mega", pokemon$pokemon, fixed = TRUE, value = TRUE)) %>%
+  rename("mega" = 'grep("-mega", pokemon$pokemon, fixed = TRUE, value = TRUE)')
+
+hits$reg <- hits$mega %>%
+  str_replace("-mega.*$", "")
+
+```
+
+The data isn't in the right format. We need to pivot it before we continue
+```{r}
+hitlong <- pivot_longer(hits, cols = everything())
+```
+
+Now that we have a df with the names of mega and their regular counterpart, let's join with the original pokemon dataframe to get the stats for these pokemon
+```{r}
+left_join(hitlong, pokemon, by = c("value" = "pokemon"))
+
+#let's keep this for future use...
+lj <- left_join(hitlong, pokemon, by = c("value" = "pokemon")) %>%
+  select(-url_icon, -url_image) %>%
+  distinct() # only print identical lines once
+  
+glimpse(lj)
+```
+
+What happens if we use the other types of join? Why do we know this is the correct one?
+(hint: check the number of rows in the df)
 
 
+# Publication-quality plots with ggpubr
+ggpubr can be used to make plots more quickly and easily.
 
-## Publication-quality plots with ggpubr
+Let's use ggpubr to make some plots comparing mega and regular pokemon
+```{r}
+aplot <- ggdensity(lj, x = "attack",
+                   add = "mean", rug = TRUE,
+                   color = "name", fill = "name",
+                   palette = c("#00AFBB", "#E7B800"))
 
+dplot <- ggdensity(lj, x = "defense",
+                   add = "mean", rug = TRUE,
+                   color = "name", fill = "name",
+                   palette = c("#00AFBB", "#E7B800"))
+
+plot_grid(aplot, dplot)
+```
+
+What else should we do to make this plot prettier before we send it off?
+
+To ask this question a different way, I should use all regulars and a different join.
+Do the pokemon that have a mega evolution have a lower regular attack/defense?
 
 
 # The Wider ggverse: devtools
+devtools has a variety of tools that facilitate package devlopment. In this case, we can install packages that are *not* on CRAN. This expands the tools available to us!
 
+Let's use it to get some more color-blind friendly palettes from 
+```{r}
+devtools::install_github("JLSteenwyk/ggpubfigs")
+library(ggpubfigs)
+```
 
 # ggsci
 ggsci has a variety of color pallates that can be used for giving your plots the color scheme of many scientific journals, TV shows, and movies.
 
 These colors can be fun, but they are not necessarily color-blind friendly or good for printing, so they are not the best choice for all applications.
-
-
 
 
 # Resources
@@ -208,4 +249,5 @@ https://thatdatatho.com/7-tidyverse-tricks-for-getting-your-data-into-the-right-
 https://thatdatatho.com/grammar-of-graphics-ggplot2/
 https://thatdatatho.com/grammar-of-graphics-ggplot-tutorial-part2/
 https://cran.r-project.org/web/packages/cowplot/vignettes/introduction.html
+https://devtools.r-lib.org/index.html
 
